test/extension_test_cases/valid/switch/switch.wacc
begin
  int i = 0;
  case i
  when 0:
    println "correct"
    end
  when 1:
    println "incorrect"
    end
  when 2:
    println "not correct"
    end
  fi
end
