test/extension_test_cases/invalid/forLoop/forNonBoolExpression.wacc
begin
  for int i = 0; 2 + 2; i = i + 1 do
    skip
  done
end
